--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -4,14 +4,17 @@
     padding-top: 0;
     .mobile-container {
         position: relative;
-        background-image: url("/assets/profile_bg.jpg");
-        background-color: $midnight-blue;
+        // background-image: url("/assets/profile_bg.jpg");
+
+        background-color: $off-white;
     }
     .mobile-header {
         display: none;
     }
 }
-
+.profile-section__vert-align {
+    @include vertical-align;
+}
 .profile-section {
     padding: 15px 0;
 }
@@ -21,7 +24,16 @@
     margin-top: 20px;
 }
 .profile__top {
-    padding-top: 60px;
+    height: 30vh;
+    padding: 0;
+    width: 100%;
+    top: 0px;
+    background-color: #817bdf;
+    background-image: url(/assets/background.jpg);
+    background-position-y: 0;
+    background-size: cover;
+    z-index: 1;
+    // padding-top: 60px;
 }
 .profile__name {
     color: white;
@@ -30,8 +42,8 @@
     margin-bottom: 0;
 }
 .profile__avatar {
-    height: 100px;
-    width: 100px;
+    height: 15vh;
+    width: 15vh;
     text-align: center;
     background-color: white;
     text-align: center;
@@ -54,7 +66,7 @@
 }
 .legend__key {
     list-style: none;
-    color: $white;
+    color: $charcoal;
     font-size: 12px;
     margin-bottom: 5px;
 }
@@ -75,11 +87,11 @@
     position: relative;
 
     & + & {
-        border-left: 1px solid $clouds;
+        border-left: 1px solid $charcoal;
     }
 }
 .inline-tout__sub-title {
-    color: $white;
+    color: $charcoal;
     font-size: 12px;
     margin: 0;
 
@@ -88,7 +100,7 @@
     }
 }
 .inline-tout__title {
-    color: white;
+    color: $charcoal;
     font-size: 36px;
     margin: 0 0 10px;
     font-weight: 300;
@@ -165,19 +177,19 @@
         .btn--outline {
             padding: 2.5px 24px;
         }
-        .profile__top {
-            padding-top: 50px;
-        }
+        // .profile__top {
+        //     padding-top: 50px;
+        // }
         .profile__bottom {
             margin-top: 0;
         }
         .profile__legend {
             margin-top: 0;
         }
-        .profile__avatar {
-            height: 75px;
-            width: 75px;
-        }
+        // .profile__avatar {
+        //     height: 75px;
+        //     width: 75px;
+        // }
     }
 }
 
@@ -190,9 +202,9 @@
     .user-profile--mobile {
         height: 100vh;
         overflow: hidden;
-        .profile__avatar {
-            height: 100px;
-            width: 100px;
-        }
+        // .profile__avatar {
+        //     height: 100px;
+        //     width: 100px;
+        // }
     }
 }
