working on profile redesign

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -33,6 +33,7 @@
     background-position-y: 0;
     background-size: cover;
     z-index: 1;
+    position: relative;
     // padding-top: 60px;
 }
 .profile__name {
