--- a/app/views/surveys/_survey_video.html.erb
+++ b/app/views/surveys/_survey_video.html.erb
@@ -38,11 +38,13 @@
 
                 <%= f.hidden_field :id %>
                 <%= f.hidden_field :complete, :value => true %>
-                <%= f.submit 'Submit Survey', class: "btn-submit btn--top-margin"%>
+                <%= f.submit 'Submit Survey', class: "btn-submit btn--top-margin js-submit-video-survey"%>
             <% end %>
         </div> <!--/.refer-friend -->
     </section><!-- /.section-wrapper -->
 </div>
+
+<%= render 'tracking_events/tracking_survey_interaction' %>
 
 <script>
     // Load API Async
@@ -92,13 +94,14 @@
     // when video ends
     function onPlayerStateChange(event) {
         if(event.data === 0) {
-            console.log('video complete');
+            bellhopsAnalytics.complete();
+
             $('.js-affiliate-wrapper').fadeOut(function fadeIn() {
                 $('.js-survey-wrapper').fadeIn();
             });
             // window.location.replace(window.location.origin);
-        } else {
-            console.dir(event);
+        } else if(event.data === 1){
+            bellhopsAnalytics.play();
         }
     }
 </script>
