add changes to bellhops survey per Griff's Google Doc

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -89,4 +89,7 @@ html body {
     .btn--no-fill {
         background-color: transparent;
     }
+    .link--underline {
+        text-decoration: underline;
+    }
 }
