--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -29,6 +29,7 @@
         border-radius: 4px;
         margin-top: 20px;
         padding: 10px 20px;
+        margin-bottom: 20px;
         @include bgColorAndHover($lavender);
 
         @include transition();
