--- a/app/views/surveys/_survey_video.html.erb
+++ b/app/views/surveys/_survey_video.html.erb
@@ -6,10 +6,10 @@
 
 <div class="page-container">
     <section class="affiliate-wrapper js-affiliate-wrapper">
-        <p class="intro-copy">Watch the clip below and answer the questions to receive 25 credits!</p>
+        <p class="intro-copy">Watch the 30 second clip below and answer two questions to receive <%= @survey.credits %> credits!</p>
         <div id="player"></div>
         <div class="affiliate">
-            <h1 class="affiliate__msg">"Earn cash in your free time."</h1>
+            <h1 class="affiliate__msg">Earn cash in your free time.</h1>
             <img class="affiliate__logo" src="/assets/bellhops_logo.png">
             <!-- <h2 class="affiliate__name">-Bellhops</h2> -->
         </div>
