Change copy of bellhops page to 'apply now' and add users with enabled accounts to email csv list

--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -304,6 +304,10 @@ body.waitlist-page {
     display: block;
     margin: 15px 0 30px;
     font-size: $lg;
+
+    .link--underline {
+        text-decoration: underline;
+    }
 }
 .affiliate-page__link--bh {
     color: #37b554;
