--- a/app/views/static_pages/bellhops_affiliate.html.erb
+++ b/app/views/static_pages/bellhops_affiliate.html.erb
@@ -4,7 +4,7 @@
     <h1 class="affiliate-page__copy">You earned +25 points!</h1>
     <img class="affiliate-page__logo" src="/assets/bellhops.jpg">
     <img class="affiliate__logo" src="/assets/bellhops_logo.png">
-    <a class="affiliate-page__link affiliate-page__link--bh" href="https://getbellhops.com/about/careers"><span class="link--underline">Apply now</span> to get all three!</a>
+    <a class="affiliate-page__link affiliate-page__link--bh" href="https://getbellhops.com/about/careers"><span class="link--underline">Apply now</span></a>
 </div>
 
 <div>
