Add links to bellhops surveys after completed

--- a/app/assets/stylesheets/interior-update.css.scss
+++ b/app/assets/stylesheets/interior-update.css.scss
@@ -188,6 +188,12 @@
     font-weight: 300;
     text-transform: uppercase;
     margin-bottom:  0;
+
+    // Bellhops application link
+    a {
+        color: $teal;
+        text-decoration: none;
+    }
 }
 .list-item__sub-cap--teal {
     color: $teal;
