--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -155,6 +155,12 @@
     // margin-top: 10px;
     display: block;
     color: $teal;
+
+    &.survey__completed--bellhops {
+        a {
+            color: $teal;
+        }
+    }
 }
 .survery__admin-control {
     color: $black;
