--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -20,7 +20,11 @@
                     <% end %>
                     <% end %>
                     <% if UserSurvey.where(survey_id: survey.id,user_id:current_user.id,complete:true).present? %>
-                        <span class='survey__completed'>Survey Completed</span>
+                        <% if survey.slug == "bellhops" %>
+                            <span class="survey__completed survey__completed--bellhops"><%= link_to 'Apply to Bellhops', bellhops_affiliate_path %></span>
+                        <% else %>
+                            <span class='survey__completed'>Survey Completed</span>
+                        <% end %>
                     <% end %>
                 </div>
             </div>
