--- a/app/views/surveys/index_mobile.html.erb
+++ b/app/views/surveys/index_mobile.html.erb
@@ -18,7 +18,13 @@
                     <% if UserSurvey.where(survey_id: survey.id,user_id:current_user.id,complete:true).present? %>
                         <div class="list-item__wrapper">
                             <p class="list-item__title"><%= survey.name %></p>
-                            <p class="list-item__sub-cap list-item__sub-cap--teal">Completed</p>
+                            <% if survey.slug == "bellhops" %>
+                                <p class="list-item__sub-cap">
+                                <%= link_to 'Apply to Bellhops', bellhops_affiliate_path %>
+                                </p>
+                            <% else %>
+                                <p class="list-item__sub-cap list-item__sub-cap--teal">Completed</p>
+                            <% end %>
                         </div>
                         <i class="fa fa-check-circle-o"></i>
                     <% else %>
