Add current user to tracking events conf object

--- a/app/views/tracking_events/_tracking_bellhops_app_link.html.erb
+++ b/app/views/tracking_events/_tracking_bellhops_app_link.html.erb
@@ -13,7 +13,8 @@ var analyticsEvent = function(c, a, l, v, n) {
 };
 var analytics = {
     conf: {
-        applicationLink: '.ga-bellhops-app-link'
+        applicationLink: '.ga-bellhops-app-link',
+        currentUser: '<%= current_user.id %>'
     },
     bind: function() {
         $(analytics.conf.applicationLink).on('click', function() {
