--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -134,12 +134,14 @@
     </head>
     <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %>">
 
-        <div class="se-pre-con">
-            <div class='circle circle--1'></div>
-            <div class='circle circle--2'></div>
-            <div class='circle circle--3'></div>
-            <div class='circle circle--4'></div>
-        </div>
+        <% if current_user %>
+            <div class="js-loading-screen se-pre-con">
+                <div class='circle circle--1'></div>
+                <div class='circle circle--2'></div>
+                <div class='circle circle--3'></div>
+                <div class='circle circle--4'></div>
+            </div>
+        <% end %>
 
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
