adding conditional survey logic

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -14,6 +14,8 @@
     <% else %>
         <% if @survey.survey_type == "video" %>
             <%= render 'survey_video' %> 
+        <% elsif @survey.survey_type == "conditional" %>
+            <%= render 'survey_conditional' %> 
         <% else %>
             <%= render 'survey_new'  %>          
         <% end %>
