--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -31,14 +31,18 @@
         </li>
         <li>
             <img src="/assets/onboarding-backdrop.jpg" alt="">
-            <div class="container">
+            <div class="container container--final js-container--final">
                 <h1 class="slides__title">Play free games. Earn real cash.</h1>
                 <div class="slides__tut-img dollars" style="background-image: url(/assets/onboarding_3.png);">
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Redeem Credits</h2>
                         <p class="secondary__desc">Redeem your credits for cash or donate the value of your credits to charity!</p>
-                        <%= link_to root_path do %><button class="nav-btn js-complete-slide">Get Started</button><% end %>
+                        <% if !params[:promo].blank? && session[:promo].downcase == "vip" %>
+                            <%= link_to session[:promo] do %><button class="nav-btn js-complete-slide">Get Started</button><% end %>
+                        <% else %>
+                            <%= link_to root_path do %><button class="nav-btn js-complete-slide">Get Started</button><% end %>
+                        <% end %>
                 </div><!-- /.secondary-copy -->
             </div>
         </li>
