--- a/app/views/surveys/_survey_conditional.html.erb
+++ b/app/views/surveys/_survey_conditional.html.erb
@@ -6,22 +6,22 @@
     <p id="notice"><%= notice %></p>
 
     <p class="intro-copy">Complete this survey and receive <%= @survey.credits %> credits!</p>
-    
+
     <%= form_for(@user_survey) do |f| %>
 
     <div class="refer-friend">
         <% @survey.survey_questions.each.with_index(1) do | sq, i |  %>
-            <div class='survey__question <%= sq.question.question_type == "condition" ? "condition" : "hidden #{@yes_id == sq.condition_id ? "yes-c" : "no-c"}" %>'>
+            <div class='survey__question <%= sq.question.question_type == "condition" ? "condition" : "hidden #{@yes_id == sq.condition_id ? "yes-answer-" + i : "no-answer-" + i}" %>'>
                 <p class="survey__question-copy"><%= sq.display_order %>. <%= sq.question.text %></p>
                     <% sq.survey_question_answers.each do | a | %>
                         <label class="control control--radio"><%= a.answer.text%><%= radio_button 'question', sq.id, a.id %>
                         <div class="control__indicator"></div>
                         </label><!-- /.control .control--radio -->
-                    <% end %>                    
+                    <% end %>
             </div><!-- /.control -->
 
         <% end %>
-            
+
 
             <%= f.hidden_field :id %>
             <%= f.hidden_field :complete, :value => true %>
