--- a/app/views/surveys/_survey_conditional.html.erb
+++ b/app/views/surveys/_survey_conditional.html.erb
@@ -11,10 +11,10 @@
 
     <div class="refer-friend">
         <% @survey.survey_questions.each.with_index(1) do | sq, i |  %>
-            <div data-survey-question="<%= sq.display_order %>" class='survey__question js-survey__question <%= sq.question.question_type == "condition" ? "condition" : "hidden #{@yes_id == sq.condition_id ? "yes-answer-" + sq.display_order.to_s : "no-answer-" + sq.display_order.to_s}" %>'>
+            <div data-survey-question="<%= sq.display_order %>" class='survey__question js-survey__question <%= sq.question.question_type == "condition" ? "condition" : "dynamic hidden #{@yes_id == sq.condition_id ? "yes-answer" : "no-answer"}" %>'>
                 <p class="survey__question-copy"><%= sq.display_order %>. <%= sq.question.text %></p>
                     <% sq.survey_question_answers.each do | a | %>
-                        <label class="control control--radio"><%= a.answer.text%><%= radio_button 'question', sq.id, a.id %>
+                        <label class="control control--radio <% if i == 1%><%= a.answer.text%><% end %>"><%= a.answer.text%><%= radio_button 'question', sq.id, a.id, class: "js-survey__answer" %>
                         <div class="control__indicator"></div>
                         </label><!-- /.control .control--radio -->
                     <% end %>
