Change survey interaction tracking event to fire on form submission and not on click, turn off disabling of select inputs on initial answer

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -236,3 +236,19 @@ button {
         margin-left: 10px;
     }
 }
+
+.form-select--wrap {
+    padding: 15px 0px 5px;
+
+    select {
+        width: 49%;
+
+        &:first-child {
+            float: left;
+        }
+
+        &:last-child {
+            float: right;
+        }
+    }
+}
