--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -68,6 +68,16 @@
                 <%= f.password_field :password_confirmation, required: true, placeholder: "Confirm Password", class: "form-input" %>
             </div><!-- /.form-input--wrap -->
 
+            <div class="form-select--wrap">
+                <select selected="Date of Birth">
+                    <option>January 1st, 1992</option>
+                </select>
+                <select selected="Gender">
+                    <option>Male</option>
+                    <option>Female</option>
+                </select>
+            </div>
+
             <div class="form-input--wrap form-input--wrap-submit">
                 <%= f.submit "Create my account", class: "form-input js-form-submit" %>
             </div><!-- /.form-input--wrap -->
