--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -25,8 +25,27 @@ button {
         height: 6vh;
     }
 }
+
+.btn--form-purple {
+    background-color: $purple;
+    @include transition();
+
+    &:hover {
+        background-color: lighten($purple, 5%);
+    }
+
+    .desktop-home & {
+        margin: 15px 0 10px;
+    }
+}
+
 .btn--form-fb {
     background-color: $fb-blue;
+    @include transition();
+
+    &:hover {
+        background-color: lighten($fb-blue, 5%);
+    }
 }
 .btn--form__icon {
     font-size: 16px !important;
@@ -41,6 +60,10 @@ button {
     font-size: 14px;
     font-weight: 500;
     color: $white;
+
+    .desktop-home & {
+        font-size: 16px;
+    }
 }
 .btn--form-prime {
     background-color: $lavender;
@@ -204,6 +227,17 @@ button {
     border-width:0 !important;
     min-height: 50px;
 }
+.mobile-form {
+    .desktop-signup & {
+        max-width: 350px;
+        padding: 40px 0;
+    }
+}
+.form-separator {
+    .desktop-signup & {
+        margin: 20px auto;
+    }
+}
 .form-separator .or-split {
     color: #5C5C5C;
     font-size: 14px;
@@ -252,3 +286,8 @@ button {
         }
     }
 }
+
+.form__signin-link {
+    color: $purple;
+}
+
