Update desktop sign in form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1328,31 +1328,31 @@ h1.arrow2 { font-size: 55px;
   }
 }
 .sign-in--desktop {
-  width: 90%;
-  max-width: 250px;
-  margin: 0 auto;
+  // width: 90%;
+  // max-width: 250px;
+  // margin: 0 auto;
 
-  input {
-    text-align: center;
-    height: 37px !important;
-    padding: 0;
-    border-radius: 100px;
-    border: 2px solid $purple-border;
-    background-color: $purple-light;
-    width: 100%;
-    color: #fff;
-  }
+  // input {
+  //   text-align: center;
+  //   height: 37px !important;
+  //   padding: 0;
+  //   border-radius: 100px;
+  //   border: 2px solid $purple-border;
+  //   background-color: $purple-light;
+  //   width: 100%;
+  //   color: #fff;
+  // }
 
-  input[type="submit"] {
-    margin-top: 20px;
-    padding: 10px 60px;
-    background-color: #915AB9;
-    border: none;
-    border-radius: 50px;
-    color: #fff;
-    display: block;
-    margin: 20px auto;
-  }
+  // input[type="submit"] {
+  //   margin-top: 20px;
+  //   padding: 10px 60px;
+  //   background-color: #915AB9;
+  //   border: none;
+  //   border-radius: 50px;
+  //   color: #fff;
+  //   display: block;
+  //   margin: 20px auto;
+  // }
 }
 .form-separator{
   position:relative;
