--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -39,12 +39,13 @@ $background: $purple-dark;
 
 body {
     &.desktop-signin-page {
+        height: 100vh;
+
         &.page-background {
           background-image: none;
         }
 
         background-color: $background;
-        height: 100vh;
 
         .btn--form-fb {
             margin-bottom: 30px;
@@ -54,11 +55,13 @@ body {
 
 
   &.desktop-signin-page {
-    .desktop-wrapper {
-        @include vertical-align;
+    .sign-in--desktop__wrap {
+        position: relative;
+        top: calc(50vh - 80px);
+        margin-top: -160px;
     }
     .navigation {
-        display: none;
+        // display: none;
     }
   }
 }
