--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -48,7 +48,7 @@ body {
         background-color: $background;
 
         .btn--form-fb {
-            margin-bottom: 30px;
+            // margin-bottom: 30px;
         }
     }
 
@@ -67,6 +67,12 @@ body {
 }
 
 html body {
+    .form--or {
+        color: $white;
+        text-transform: uppercase;
+        font-size: 12px;
+        margin: 5px 0;
+    }
     section {
         // @include vertical-align;
         width: 325px;
@@ -170,7 +176,8 @@ html body {
       text-align: center;
 
       .fa {
-        @include vertical-align;
+        @include vertical-align();
+        top: 45%;
         color: $plum;
       }
     }
