--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -30,7 +30,7 @@ $sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $white: #fff;
 $purple: #817bdf;
 $plum: #423142;
-$purple-dark: #292931;
+$purple-dark: #211E2B;
 $clouds: #dedede;
 $barney: #ad6bad;
 
