--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
             <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">How It Works</a></li>
             <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">About</a></li>
             <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link">Contact</a></li>
-            <li class="landing-page__nav-item"><a href="#" class="landing-page__nav-link landing-page__nav-link--login">Sign in</a></li>
+            <li class="landing-page__nav-item"><a href="/signin" class="landing-page__nav-link landing-page__nav-link--login">Sign in</a></li>
         </ul>
     </div><!-- /.landing-page__nav--right -->
 </section><!-- /.landing-page__nav -->
@@ -35,7 +35,7 @@
 </section><!-- /.landing-page__landscape -->
 
 <section class='landing-page__section landing-page__section--how'>
-        <h2 class="section__title">How it Works </h2>
+        <h2 class="section__title">How it Works</h2>
         <div class="how__tout">
             <img src="/assets/landing_icon_1.png" class="how-it-works-image">
             <p class="how-it-works-copy">Play any game to<br/> earn credits</p>
@@ -53,85 +53,12 @@
 </section> <!-- /.landing-page__section--how -->
 
 
-<script>
-    (function(){
-          ShootingStar = function( id ) {
-            this.n = 0;
-            this.m = 0;
-            this.defaultOptions = { velocity:8, starSize:10, life:300, beamSize:400, dir:-1 };
-            this.options = {};
-            id = ( typeof id != "undefined" )?id:"";
-            this.capa = ( $( id ).lenght > 0 )?"body":id;
-            this.wW = $( this.capa ).innerWidth();
-            this.hW = $( this.capa ).innerHeight();
-          };
+<section class='landing-page__section landing-page__section--about'>
+        <h2 class="section__title">About</h2>
+        <p class="section__copy section__copy--left">
+            Bacon ipsum dolor amet drumstick jerky swine boudin rump, chuck andouille shank corned beef cow. Short loin bresaola kevin tenderloin pork belly, doner landjaeger prosciutto alcatra frankfurter sausage pork chop turkey boudin strip steak. Turducken turkey t-bone ham.
+        </p>
+        <img class="about-img" src="/assets/svgs/all-platforms.svg">
+</section> <!-- /.landing-page__section--how -->
 
-          ShootingStar.prototype.addBeamPart = function( x, y ) {
-            this.n++;
-            var name = this.getRandom( 100, 1 );
-            $( "#star"+name ).remove();
-            $( this.capa ).append( "<div id='star"+name+"'></div>" );
-            $( "#star"+name ).append( "<div id='haz"+this.n+"' class='haz' style='position:absolute; color:#FFF; width:10px; height:10px; font-weight:bold; font-size:"+this.options.starSize+"px'>·</div>" );
-            if ( this.n > 1 ) $( "#haz" + ( this.n - 1 ) ).css( { color:"rgba(255,255,255,0.5)" } );
-            $( "#haz" + this.n ).css( { top: y + this.n, left: x + ( this.n * this.options.dir ) } );
-          }
-
-          ShootingStar.prototype.delTrozoHaz = function() {
-            this.m++;
-            $( "#haz" + this.m ).animate( {opacity:0}, 75 );
-            if ( this.m >= this.options.beamSize ) { $( "#ShootingStarParams" ).fadeOut( "slow" ); }
-          }
-
-          ShootingStar.prototype.getRandom = function( max, min ) {
-            return Math.floor( Math.random() * (max - min + 1)) + min;
-          }
-
-          ShootingStar.prototype.toType = function ( obj ) {
-            if ( typeof obj === "undefined" ) { return "undefined"; /* consider: typeof null === object */ }
-            if ( obj === null ) { return "null"; }
-            var type = Object.prototype.toString.call( obj ).match( /^\[object\s(.*)\]$/ )[1] || '';
-            switch ( type ) {
-              case 'Number': if ( isNaN( obj ) ) { return "nan"; } else { return "number"; }
-              case 'String': case 'Boolean': case 'Array': case 'Date': case 'RegExp': case 'Function': return type.toLowerCase();
-            }
-            if ( typeof obj === "object" ) { return "object"; }
-            return undefined;
-          }
-
-          ShootingStar.prototype.launchStar = function( options ) {
-            if ( this.toType( options ) != "object" ) { options = {}; }
-            this.options = $.extend( {}, this.defaultOptions, options );
-            this.n=0;
-            this.m=0;
-            var i=0, l=this.options.beamSize,
-                x=this.getRandom( this.wW - this.options.beamSize - 100, 100 ), y=this.getRandom( this.hW - this.options.beamSize - 100, 100 ),
-                self = this;
-            for( ; i<l; i++ ) { setTimeout( function(){ self.addBeamPart( x, y ); }, self.options.life + ( i * self.options.velocity ) ); }
-            for( i=0; i<l; i++ ) { setTimeout( function(){ self.delTrozoHaz() }, self.options.beamSize + ( i * self.options.velocity ) ); }
-            $( "#ShootingStarParams" ).html( "Launching shooting star. PARAMS: wW: " + this.wW + " - hW: " + this.hW + " - life: " + this.options.life + " - beamSize: " + this.options.beamSize + " - velocity: " + this.options.velocity );
-            $( "#ShootingStarParams" ).fadeIn( "slow" );
-          }
-
-          ShootingStar.prototype.launch = function( everyTime ) {
-            if ( this.toType( everyTime ) != "number" ) { everyTime = 10; }
-            everyTime = everyTime * 1000;
-            this.launchStar();
-            var self = this;
-            setInterval( function() {
-              var options = {
-                dir: ( self.getRandom( 1, 0 ))?1:-1,
-                life: self.getRandom( 400, 100 ),
-                beamSize: self.getRandom( 700, 400 ),
-                velocity: self.getRandom( 20, 8 )
-              }
-              self.launchStar( options );
-            }, everyTime );
-          }
-
-
-          $( document ).ready( function(){
-            var shootingStarObj = new ShootingStar( ".landing-page__landscape" );
-                shootingStarObj.launch();
-          });
-    })();
-</script>
+<%= render "shooting_stars" %>
